--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -26,7 +26,7 @@
 body {
   color: #2d2d2d;
   font-size: 1rem;
-  font-family: "Rubik", sans-serif;
+  font-family: "Noto Sans", sans-serif;
   font-weight: 400;
   line-height: 1.875;
   margin: 0;
